--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -231,6 +231,51 @@
 
                         app:layout_constraintTop_toTopOf="parent"/>
 
+                <!-- de categorieën van de meeting -->
+                <TextView
+                        android:id="@+id/text_meetingdetail_categories"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        tools:text="Categorieën : 106jes | Peugeot"
+                        android:categories="@{meetingViewModel.selectedMeeting.categories}"
+                        android:drawableStart="@drawable/ic_categories_pink_24dp"
+
+                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
+
+                        android:layout_marginTop="12dp"
+                />
+
+                <!-- de mensen die geliked hebben -->
+                <TextView
+                        android:id="@+id/text_meetingdetail_amount_liked"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        tools:text="Aantal liked: 10"
+                        android:amountLiked="@{meetingViewModel.selectedMeeting.listUsersLiked}"
+                        android:drawableStart="@drawable/ic_categories_pink_24dp"
+
+                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_categories"
+
+                        android:layout_marginTop="6dp"
+                />
+
+                <!-- de mensen die gaan hebben opgegeven -->
+                <TextView
+                        android:id="@+id/text_meetingdetail_amount_going"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        tools:text="Aantal going: 20"
+                        android:amountGoing="@{meetingViewModel.selectedMeeting.listUsersGoing}"
+                        android:drawableStart="@drawable/ic_check_pink_24dp"
+
+                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_liked"
+
+                        android:layout_marginTop="6dp"
+                />
+
                 <!-- agenda -->
                 <Button
                         android:id="@+id/button_meetingdetail_agenda"
@@ -241,7 +286,7 @@
                         android:drawableEnd="@drawable/ic_add_agenda_pink_18dp"
                         android:text="@string/btn_meeting_agenda"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
+                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_going"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
 
