--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -240,6 +240,7 @@
                         tools:text="Categorieën : 106jes | Peugeot"
                         android:categories="@{meetingViewModel.selectedMeeting.categories}"
                         android:drawableStart="@drawable/ic_categories_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
 
@@ -254,7 +255,8 @@
 
                         tools:text="Aantal liked: 10"
                         android:amountLiked="@{meetingViewModel.selectedMeeting.listUsersLiked}"
-                        android:drawableStart="@drawable/ic_categories_pink_24dp"
+                        android:drawableStart="@drawable/ic_heart_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_categories"
 
@@ -270,6 +272,7 @@
                         tools:text="Aantal going: 20"
                         android:amountGoing="@{meetingViewModel.selectedMeeting.listUsersGoing}"
                         android:drawableStart="@drawable/ic_check_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_liked"
 
