--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -236,6 +236,7 @@
                         tools:text="Categorieën : 106jes | Peugeot"
                         android:categories="@{meetingViewModel.selectedMeeting.categories}"
                         android:drawableStart="@drawable/ic_categories_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
 
@@ -250,7 +251,8 @@
 
                         tools:text="Aantal liked: 10"
                         android:amountLiked="@{meetingViewModel.selectedMeeting.listUsersLiked}"
-                        android:drawableStart="@drawable/ic_categories_pink_24dp"
+                        android:drawableStart="@drawable/ic_heart_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_categories"
 
@@ -266,6 +268,7 @@
                         tools:text="Aantal going: 20"
                         android:amountGoing="@{meetingViewModel.selectedMeeting.listUsersGoing}"
                         android:drawableStart="@drawable/ic_check_pink_24dp"
+                        android:drawablePadding="8dp"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_liked"
 
