--- a/CarMeets Android App/app/src/main/res/drawable/ic_navigation_white_18dp.xml
+++ b/CarMeets Android App/app/src/main/res/drawable/ic_navigation_white_18dp.xml
@@ -1,4 +1,4 @@
-<vector android:height="18dp" android:tint="#E8175D"
+<vector android:height="18dp" android:tint="#FFFF"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="18dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M21,3L3,10.53v0.98l6.84,2.65L12.48,21h0.98L21,3z"/>
