--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -197,25 +197,25 @@
 
         <!-- de beschrijving scrollview -->
         <ScrollView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
 
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider_meetingdetail_undersubtitle"
 
                 android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp">
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+        >
 
             <android.support.constraint.ConstraintLayout
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
 
+                    android:paddingBottom="10dp"
+            >
                 <!-- de beschrijving -->
                 <TextView
                         android:id="@+id/text_meetingdetail_description"
@@ -241,6 +241,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
 
                         android:layout_marginTop="12dp"
+                        android:layout_marginLeft="8dp"
                 />
 
                 <!-- de mensen die geliked hebben -->
@@ -257,6 +258,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_categories"
 
                         android:layout_marginTop="6dp"
+                        android:layout_marginLeft="8dp"
                 />
 
                 <!-- de mensen die gaan hebben opgegeven -->
@@ -273,6 +275,27 @@
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_liked"
 
                         android:layout_marginTop="6dp"
+                        android:layout_marginLeft="8dp"
+                />
+
+                <!-- Virtual divider vertical 10% -->
+                <android.support.constraint.Guideline
+                        android:id="@+id/guideline_meetingdetail_10percent_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.10"
+                />
+
+                <!-- Virtual divider vertical 90% -->
+                <android.support.constraint.Guideline
+                        android:id="@+id/guideline_meetingdetail_90percent_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.90"
                 />
 
                 <!-- opslaan in agenda knop -->
@@ -281,17 +304,16 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableStart="@drawable/ic_add_agenda_pink_18dp"
-                        android:drawableEnd="@drawable/ic_add_agenda_pink_18dp"
+                        android:drawableStart="@drawable/ic_add_agenda_white_18dp"
+                        android:drawableEnd="@drawable/ic_add_agenda_white_18dp"
                         android:text="@string/btn_meeting_agenda"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_going"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
 
                         android:layout_marginTop="12dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="50dp"/>
+                />
 
                 <!-- opslaan in routebeschrijving knop -->
                 <Button
@@ -299,17 +321,16 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableStart="@drawable/ic_navigation_pink_18dp"
-                        android:drawableEnd="@drawable/ic_navigation_pink_18dp"
+                        android:drawableStart="@drawable/ic_navigation_white_18dp"
+                        android:drawableEnd="@drawable/ic_navigation_white_18dp"
                         android:text="@string/btn_meeting_route"
 
                         app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_agenda"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
 
-                        android:layout_marginTop="8dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="50dp"/>
+                        android:layout_marginTop="12dp"
+                />
 
                 <!-- ga naar website knop -->
                 <Button
@@ -317,19 +338,18 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableStart="@drawable/ic_link_pink_18dp"
-                        android:drawableEnd="@drawable/ic_link_pink_18dp"
+                        android:drawableStart="@drawable/ic_link_white_18dp"
+                        android:drawableEnd="@drawable/ic_link_white_18dp"
                         android:text="@string/btn_meeting_website"
 
                         android:visibility='@{!TextUtils.isEmpty(meetingViewModel.selectedMeeting.website)}'
 
                         app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
 
-                        android:layout_marginTop="8dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="50dp"/>
+                        android:layout_marginTop="12dp"
+                />
 
             </android.support.constraint.ConstraintLayout>
 
