--- a/CarMeets Android App/app/src/main/res/layout/fragment_login.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_login.xml
@@ -71,6 +71,8 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                
+                android:paddingBottom="10dp"
         >
 
 
