--- a/CarMeets Android App/app/src/main/res/layout/partial_error_with_show_cache.xml
+++ b/CarMeets Android App/app/src/main/res/layout/partial_error_with_show_cache.xml
@@ -57,7 +57,7 @@
 
                 app:layout_constraintDimensionRatio="WH,550:163"
                 android:scaleType="fitCenter"
-                android:src="@drawable/logo"
+                android:src="@drawable/img_logo"
                 android:tint="@color/colorPrimary"
                 android:contentDescription="@string/alt_logo"
 
