--- a/CarMeets Android App/app/src/main/res/layout/partial_loading.xml
+++ b/CarMeets Android App/app/src/main/res/layout/partial_loading.xml
@@ -59,7 +59,7 @@
                 app:layout_constraintDimensionRatio="WH,1:1"
                 android:scaleType="fitCenter"
                 android:src="@{`loading_animation_carmeets_3e157a5f-56dc-4017-85ce-ee679d3e0967`}"
-                tools:src="@drawable/loading"
+                tools:src="@drawable/gif_loading"
                 android:tint="@color/colorPrimary"
                 android:contentDescription="@string/alt_logo"
 
