--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Fragment voor het tonen van account opties (twopane) -->
+<!-- Fragment voor het tonen van account opties (two pane) -->
 <layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
 >
     <data>
+
         <import type="android.view.View"/>
 
         <variable
                 name="accountViewModel"
-                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.AccountViewModel"/>
+                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.AccountViewModel"
+        />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -18,16 +21,17 @@
             android:layout_height="match_parent"
     >
 
-        <!-- virtuele scheidingslijn verticaal 50% -->
+        <!-- Virtuele scheidingslijn op 50% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guide_account_50percent_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5"/>
+                app:layout_constraintGuide_percent="0.5"
+        />
 
-        <!-- virtuele scheidingslijn verticaal 5% -->
+        <!-- Virtuele scheidingslijn op 5% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_account_5percent_vertical"
                 android:layout_width="wrap_content"
@@ -37,7 +41,7 @@
                 app:layout_constraintGuide_percent="0.05"
         />
 
-        <!-- virtuele scheidingslijn verticaal 45% -->
+        <!-- Virtuele scheidingslijn op 45% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_account_45percent_vertical"
                 android:layout_width="wrap_content"
@@ -66,7 +70,7 @@
 
                 <!-- Titel -->
                 <TextView
-                        android:id="@+id/txt_account_title"
+                        android:id="@+id/text_account_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -78,14 +82,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@+id/txt_account_username"
+                        app:layout_constraintBottom_toTopOf="@+id/text_account_username"
 
                         android:layout_marginBottom="8dp"
                 />
 
                 <!-- Gebruikersnaam -->
                 <TextView
-                        android:id="@+id/txt_account_username"
+                        android:id="@+id/text_account_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -97,15 +101,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txt_account_title"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_manage_account"
+                        app:layout_constraintTop_toBottomOf="@+id/text_account_title"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_manage_account"
 
                         android:layout_marginTop="8dp"
                 />
 
                 <!-- Account instellingen -->
                 <Button
-                        android:id="@+id/btn_account_manage_account"
+                        android:id="@+id/button_account_manage_account"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -115,15 +119,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txt_account_username"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_preferences"
+                        app:layout_constraintTop_toBottomOf="@+id/text_account_username"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_preferences"
 
                         android:layout_marginTop="16dp"
                 />
 
                 <!-- Voorkeuren -->
                 <Button
-                        android:id="@+id/btn_account_preferences"
+                        android:id="@+id/button_account_preferences"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -133,15 +137,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/btn_account_manage_account"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_logout"
+                        app:layout_constraintTop_toBottomOf="@+id/button_account_manage_account"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_logout"
 
                         android:layout_marginTop="16dp"
                 />
 
                 <!-- Afmelden -->
                 <Button
-                        android:id="@+id/btn_account_logout"
+                        android:id="@+id/button_account_logout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -151,16 +155,17 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/btn_account_preferences"
+                        app:layout_constraintTop_toBottomOf="@+id/button_account_preferences"
                         app:layout_constraintBottom_toBottomOf="parent"
 
                         android:layout_marginTop="16dp"
                 />
 
             </android.support.constraint.ConstraintLayout>
+
         </ScrollView>
 
-        <!-- visuele scheidingslijn -->
+        <!-- Visuele scheidingslijn op 50% verticaal -->
         <View
                 android:id="@+id/divider_account_50percent"
                 android:layout_width="2dp"
@@ -172,9 +177,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
 
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+        />
 
-        <!-- detail container -->
+        <!-- Submenu settings container -->
         <FrameLayout
                 android:id="@+id/frame_account_two_pane_container"
                 android:layout_width="0dp"
@@ -185,7 +191,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guide_account_50percent_vertical"
 
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp"
+        />
 
     </android.support.constraint.ConstraintLayout>
 
