--- a/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
@@ -6,11 +6,14 @@
         xmlns:tools="http://schemas.android.com/tools"
 >
     <data>
+
         <import type="android.view.View"/>
 
         <variable
                 name="accountViewModel"
-                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.AccountViewModel"/>
+                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.AccountViewModel"
+        />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -18,7 +21,7 @@
             android:layout_height="match_parent"
     >
 
-        <!-- Virtual divider vertical 10% -->
+        <!-- Virtuele scheidingslijn op 10% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_account_5percent_vertical"
                 android:layout_width="wrap_content"
@@ -28,7 +31,7 @@
                 app:layout_constraintGuide_percent="0.1"
         />
 
-        <!-- Virtual divider vertical 90% -->
+        <!-- Virtuele scheidingslijn op 90% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_account_90percent_vertical"
                 android:layout_width="wrap_content"
@@ -41,6 +44,7 @@
         <ScrollView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_account_5percent_vertical"
@@ -49,11 +53,12 @@
 
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+            >
 
-                <!-- Titel -->
+                <!-- Begroeting -->
                 <TextView
-                        android:id="@+id/txt_account_title"
+                        android:id="@+id/text_account_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -65,14 +70,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@+id/txt_account_username"
+                        app:layout_constraintBottom_toTopOf="@+id/text_account_username"
 
                         android:layout_marginBottom="8dp"
                 />
 
                 <!-- Gebruikersnaam -->
                 <TextView
-                        android:id="@+id/txt_account_username"
+                        android:id="@+id/text_account_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -84,15 +89,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txt_account_title"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_manage_account"
+                        app:layout_constraintTop_toBottomOf="@+id/text_account_title"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_manage_account"
 
                         android:layout_marginTop="8dp"
                 />
 
-                <!-- Account instellingen -->
+                <!-- Account beheren -->
                 <Button
-                        android:id="@+id/btn_account_manage_account"
+                        android:id="@+id/button_account_manage_account"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -102,15 +107,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txt_account_username"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_preferences"
+                        app:layout_constraintTop_toBottomOf="@+id/text_account_username"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_preferences"
 
                         android:layout_marginTop="16dp"
                 />
 
                 <!-- Voorkeuren -->
                 <Button
-                        android:id="@+id/btn_account_preferences"
+                        android:id="@+id/button_account_preferences"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -120,15 +125,15 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/btn_account_manage_account"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_account_logout"
+                        app:layout_constraintTop_toBottomOf="@+id/button_account_manage_account"
+                        app:layout_constraintBottom_toTopOf="@+id/button_account_logout"
 
                         android:layout_marginTop="16dp"
                 />
 
                 <!-- Afmelden -->
                 <Button
-                        android:id="@+id/btn_account_logout"
+                        android:id="@+id/button_account_logout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -138,7 +143,7 @@
 
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/btn_account_preferences"
+                        app:layout_constraintTop_toBottomOf="@+id/button_account_preferences"
                         app:layout_constraintBottom_toBottomOf="parent"
 
                         android:layout_marginTop="16dp"
