--- a/CarMeets Android App/app/src/main/res/layout/fragment_change_passord.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_change_passord.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- A fragment to change your password -->
+<!-- Fragment voor het wijzigen van een aangemelde gebruiker zijn wachtwoord -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         tools:ignore="Autofill"
 >
 
-    <!-- Virtual divider vertical 10% -->
+    <!-- Virtuele scheidingslijn op 10% verticaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_change_password_10percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1"
     />
 
-    <!-- Virtual divider vertical 90% -->
+    <!-- Virtuele scheidingslijn op 90% verticaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_change_password_90percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9"
     />
@@ -38,11 +42,12 @@
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+        >
 
             <!-- Titel -->
             <TextView
-                    android:id="@+id/txt_change_password_title"
+                    android:id="@+id/text_change_password_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
@@ -59,7 +64,7 @@
 
             <!-- Nieuw wachtwoord -->
             <EditText
-                    android:id="@+id/txt_change_password_new_password"
+                    android:id="@+id/text_change_password_new_password"
 
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -69,14 +74,14 @@
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_title"
+                    app:layout_constraintTop_toBottomOf="@+id/text_change_password_title"
 
                     android:layout_marginTop="12dp"
             />
 
             <!-- Bevestig wachtwoord -->
             <EditText
-                    android:id="@+id/txt_change_password_confirm_password"
+                    android:id="@+id/text_change_password_confirm_password"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
@@ -85,14 +90,14 @@
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_new_password"
+                    app:layout_constraintTop_toBottomOf="@+id/text_change_password_new_password"
 
                     android:layout_marginTop="8dp"
             />
 
             <!-- wijzig wachtwoord bevestig knop -->
             <Button
-                    android:id="@+id/btn_change_password"
+                    android:id="@+id/button_change_password"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
@@ -100,10 +105,13 @@
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_confirm_password"
+                    app:layout_constraintTop_toBottomOf="@+id/text_change_password_confirm_password"
 
                     android:layout_marginTop="12dp"
             />
+
         </android.support.constraint.ConstraintLayout>
+
     </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
