Meeting list layout cleanup

--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meeting_list.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meeting_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- De layout van lijst voor tablets, met detail als twopane -->
+<!-- Een fragment voor een lijst van meetings weer te geven (two pane) -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,67 +8,72 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:orientation="vertical">
+        android:orientation="vertical"
+>
 
-    <!-- virtuele scheidingslijn  -->
+    <!-- Virtuele scheidingslijn op 45% verticaal  -->
     <android.support.constraint.Guideline
-            android:id="@+id/guide_meetinglist_45percent_vertical"
+            android:id="@+id/guide_meeting_list_45percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.45"/>
+            app:layout_constraintGuide_percent="0.45"
+    />
 
     <!-- Swipe to refresh voor lijst -->
     <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh_meetinglist"
+            android:id="@+id/swipe_refresh_meeting_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guide_meetinglist_45percent_vertical"
+            app:layout_constraintEnd_toStartOf="@+id/guide_meeting_list_45percent_vertical"
     >
 
-        <!-- de lijst -->
+        <!-- De lijst van meetings -->
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview_meetinglist"
+                android:id="@+id/recycler_meeting_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
                 tools:listitem="@layout/item_meeting_small"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
 
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp"
+        />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <!-- visuele scheidingslijn -->
+    <!-- Visuele scheidingslijn op 45% verticaal -->
     <View
-            android:id="@+id/divider_meetinglist_45percent"
+            android:id="@+id/divider_meeting_list_45percent"
             android:layout_width="2dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
 
-            app:layout_constraintEnd_toStartOf="@+id/guide_meetinglist_45percent_vertical"
+            app:layout_constraintEnd_toStartOf="@+id/guide_meeting_list_45percent_vertical"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
 
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+    />
 
-    <!-- detail container -->
+    <!-- Container voor twopane meeting list zijn detail pagina -->
     <FrameLayout
-            android:id="@+id/frame_meetinglist_meetingdetailcontainer"
+            android:id="@+id/frame_meeting_list_meeting_detail_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/divider_meetinglist_45percent"
+            app:layout_constraintStart_toStartOf="@+id/divider_meeting_list_45percent"
 
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+    />
 
 </android.support.constraint.ConstraintLayout>
