--- a/CarMeets Android App/app/src/main/res/layout/fragment_meeting_list.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meeting_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- een fragment voor een lijst weer te geven -->
+<!-- Een fragment voor een lijst van meetings weer te geven (single pane) -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,11 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:orientation="vertical">
+        android:orientation="vertical"
+>
 
     <!-- Swipe to refresh voor lijst -->
     <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh_meetinglist"
+            android:id="@+id/swipe_refresh_meeting_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
@@ -21,8 +22,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
     >
+
+        <!-- De lijst van meetings -->
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview_meetinglist"
+                android:id="@+id/recycler_meeting_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
