Placeholder en preferences cleanup

--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- een placeholder met logo en tekst over ontstaan -->
+<!-- Fragment die dient als placeholder voor een op te vullen fragment container. -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,21 +7,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:orientation="vertical">
+        android:orientation="vertical"
+>
 
     <!-- logo -->
     <ImageView
-            android:id="@+id/imageview_logo"
+            android:id="@+id/image_logo"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
             app:layout_constraintDimensionRatio="BH,550:163"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/img_logo"
+            android:contentDescription="@string/alt_carmeets_logo"
 
-            app:layout_constraintStart_toStartOf="@id/guideline_placeholder_logo_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_placeholder_logo_90percent_vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/guideline_placeholder_logo_50percent_horizontal"
+            app:layout_constraintStart_toStartOf="@id/guideline_logo_10percent_vertical"
+            app:layout_constraintEnd_toEndOf="@id/guideline_logo_90percent_vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_logo_50percent_horizontal"
             app:layout_constraintTop_toTopOf="parent"
 
             app:layout_constraintVertical_bias="1"
@@ -29,20 +31,21 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:contentDescription="@string/alt_carmeets_logo"/>
+    />
 
-    <!-- virtuele scheidingslijn horizontaal 50% -->
+    <!-- Virtuele scheidingslijn op 50% horizontaal -->
     <android.support.constraint.Guideline
-            android:id="@+id/guideline_placeholder_logo_50percent_horizontal"
+            android:id="@+id/guideline_logo_50percent_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5"/>
+            app:layout_constraintGuide_percent="0.5"
+    />
 
-    <!-- virtuele scheidingslijn verticaal 10% -->
+    <!-- Virtuele scheidingslijn op 10% horizontaal -->
     <android.support.constraint.Guideline
-            android:id="@+id/guideline_placeholder_logo_10percent_vertical"
+            android:id="@+id/guideline_logo_10percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -50,9 +53,9 @@
             app:layout_constraintGuide_percent="0.1"
     />
 
-    <!-- virtuele scheidingslijn verticaal 90% -->
+    <!-- Virtuele scheidingslijn op 90% horizontaal -->
     <android.support.constraint.Guideline
-            android:id="@+id/guideline_placeholder_logo_90percent_vertical"
+            android:id="@+id/guideline_logo_90percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -64,25 +67,27 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
 
-            app:layout_constraintStart_toStartOf="@id/guideline_placeholder_logo_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_placeholder_logo_90percent_vertical"
-            app:layout_constraintTop_toTopOf="@+id/guideline_placeholder_logo_50percent_horizontal"
+            app:layout_constraintStart_toStartOf="@id/guideline_logo_10percent_vertical"
+            app:layout_constraintEnd_toEndOf="@id/guideline_logo_90percent_vertical"
+            app:layout_constraintTop_toTopOf="@+id/guideline_logo_50percent_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
 
             app:layout_constraintVertical_bias="0"
     >
-    <!-- Tekst over ontstaan -->
-    <TextView
-            android:id="@+id/text_placeholder_logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
-            android:text="@string/txt_about_carmeets"
-            android:textSize="15sp"
-            android:textAlignment="center"
+        <!-- Tekst over ontstaan -->
+        <TextView
+                android:id="@+id/text_logo_about_carmeets"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-            android:paddingBottom="10dp"
-    />
+                android:text="@string/txt_about_carmeets"
+                android:textSize="15sp"
+                android:textAlignment="center"
+
+                android:paddingBottom="10dp"
+        />
+
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
