--- a/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
@@ -3,11 +3,12 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
 
-    <!-- Virtual divider vertical 10% -->
+    <!-- Virtuele scheidingslijn op 10% horizontaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_preferences_10percent_vertical"
             android:layout_width="wrap_content"
@@ -17,7 +18,7 @@
             app:layout_constraintGuide_percent="0.1"
     />
 
-    <!-- Virtual divider vertical 90% -->
+    <!-- Virtuele scheidingslijn op 90% horizontaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_preferences_account_90percent_vertical"
             android:layout_width="wrap_content"
@@ -47,7 +48,7 @@
 
             <!-- Titel -->
             <TextView
-                    android:id="@+id/txt_preferences_title"
+                    android:id="@+id/text_preferences_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -65,7 +66,7 @@
 
             <!-- Startscherm instellen -->
             <Button
-                    android:id="@+id/btn_preferences_change_boot_page"
+                    android:id="@+id/button_preferences_change_boot_page"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
@@ -75,14 +76,14 @@
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_preferences_title"
+                    app:layout_constraintTop_toBottomOf="@+id/text_preferences_title"
 
                     android:layout_marginTop="16dp"
             />
 
             <!-- Startscherm instellen -->
             <Button
-                    android:id="@+id/btn_preferences_change_default_list_layout"
+                    android:id="@+id/button_preferences_change_default_list_layout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
@@ -92,7 +93,7 @@
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_preferences_change_boot_page"
+                    app:layout_constraintTop_toBottomOf="@+id/button_preferences_change_boot_page"
 
                     android:layout_marginTop="16dp"
             />
