--- a/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
 >
 
-    <!-- Virtuele scheidingslijn op 10% horizontaal -->
+    <!-- Virtuele scheidingslijn op 10% verticaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_preferences_10percent_vertical"
             android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
             app:layout_constraintGuide_percent="0.1"
     />
 
-    <!-- Virtuele scheidingslijn op 90% horizontaal -->
+    <!-- Virtuele scheidingslijn op 90% verticaal -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_preferences_account_90percent_vertical"
             android:layout_width="wrap_content"
