--- a/CarMeets Android App/app/src/main/res/layout/partial_loading.xml
+++ b/CarMeets Android App/app/src/main/res/layout/partial_loading.xml
@@ -20,7 +20,7 @@
             android:visibility="@{isVisible}"
     >
 
-        <!-- Virtual divider horizontal 50% -->
+        <!-- Virtuele scheidingslijn op 50% horizontaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_partial_loading_with_show_cache_50percent_horizontal"
                 android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
                 app:layout_constraintGuide_percent="0.5"
         />
 
-        <!-- Virtual divider vertical 10% -->
+        <!-- Virtuele scheidingslijn op 10% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_partial_loading_with_show_cache_10percent_vertical"
                 android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
                 app:layout_constraintGuide_percent="0.10"
         />
 
-        <!-- Virtual divider vertical 90% -->
+        <!-- Virtuele scheidingslijn op 90% verticaal -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_partial_loading_with_show_cache_90percent_vertical"
                 android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
 
         <!-- Logo -->
         <ImageView
-                android:id="@+id/img_partial_loading"
+                android:id="@+id/image_partial_loading"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
