--- a/CarMeets Android App/app/src/main/res/layout/fragment_login.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Fragment om een gebruiker te laten aanmelden -->
 <android.support.constraint.ConstraintLayout
+        android:id="@+id/fragment_login"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
