Register tests en kleine doc fout in login tests

--- a/CarMeets Android App/app/src/main/res/layout/fragment_register.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Fragment om de gebruiker te laten registreren -->
 <android.support.constraint.ConstraintLayout
+        android:id="@+id/fragment_register"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
